# Athkar-Desktop

./: .gitignore  BUILDING.md  CHANGELOG.md  GITHUB_SETUP.md  LICENSE  README-Tauri.md  README.md  RELEASE_NOTES.md  athkar-data.json  build-instructions.md  clear-icon-cache.bat  convert-icon.js  index.html  main.js  package-lock.json  package.json  renderer.js  settings-renderer.js  settings-styles.css  settings.html  styles.css  user-settings.example.json
.github/workflows/: release.yml
public/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  athkar-data.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
